--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,59 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+html {
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+/*
+ * https://type-scale.com/ | Minor third base
+ */
+@import url('https://fonts.googleapis.com/css?family=Raleway:400|Open+Sans:400');
+
+html {
+  font-size: 100%;
+} /*16px*/
+
+body {
+  background-color: white;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
+  line-height: 1.65;
+  color: #333;
+}
+
+p {margin-bottom: 1.15rem;}
+
+h1, h2, h3, h4, h5 {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 400;
+  line-height: 1.15;
+}
+
+h1 {
+  margin-top: 0;
+  font-size: 2em;
+}
+
+h2 {font-size: 1.5em;}
+
+h3 {font-size: 1.44em;}
+
+h4 {font-size: 1.2em;}
+
+h5 {font-size: 1em;}
+
+small, .text_small {font-size: 0.833em;}
+
+/*
+ *  Body Padding
+ */
+
+body {
+  padding: 30px;
+}
